--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
         "laravel-mix": "^2.0",
         "lodash": "^4.17.4",
         "vue": "^2.5.7"
+    },
+    "dependencies": {
+        "@fengyuanchen/datepicker": "^0.6.5"
     }
 }
